# ChangeLog for app-cdr/gcdemu
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gcdemu/ChangeLog,v 1.11 2010/10/19 14:36:51 pva Exp $

*gcdemu-1.3.0 (19 Oct 2010)

  19 Oct 2010; Peter Volkov <pva@gentoo.org> +gcdemu-1.3.0.ebuild:
  Version bump. Updated python related code, bug 308323, thank Arfrever
  Frehtes Taifersar Arahesis for report.

  01 Feb 2010; Peter Volkov <pva@gentoo.org> -gcdemu-1.1.0.ebuild,
  gcdemu-1.2.0.ebuild:
  amd64 stable, bug #296868. Dropped old.

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org> gcdemu-1.2.0.ebuild:
  stable x86, bug 296868

  11 Jan 2010; Peter Volkov <pva@gentoo.org> gcdemu-1.2.0.ebuild:
  Updated deps for dev-python/gnome-python-desktop, bug #292967, thank Morse
  for report.

*gcdemu-1.2.0 (23 Oct 2009)

  23 Oct 2009; Peter Volkov <pva@gentoo.org> +gcdemu-1.2.0.ebuild:
  Version bump, bug #279908, thank Fabio Cavallo for report. Fixed
  invisibility of applet, bug #248874, thank Vladimir Kokarev for report.
  Added missed deps, bug #228239, thank Evil Compile Person for report.

  22 Aug 2008; Markus Meier <maekke@gentoo.org> gcdemu-1.0.0.ebuild:
  amd64 stable, bug #232566

*gcdemu-1.1.0 (03 Aug 2008)

  03 Aug 2008; Marcelo Goes <vanquirius@gentoo.org> +gcdemu-1.1.0.ebuild:
  1.1.0 version bump for bug 232996. Thanks to Yaroslav Isakov
  <yaroslav.isakov at gmail dot com>.

  26 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> gcdemu-1.0.0.ebuild:
  Add ~amd64 keyword wrt bug #198672

  15 Jun 2008; Samuli Suominen <drac@gentoo.org> gcdemu-1.0.0.ebuild:
  Move intltool to DEPEND.

  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org> gcdemu-1.0.0.ebuild:
  stable x86, bug 224825

*gcdemu-1.0.0 (19 May 2008)

  19 May 2008; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +gcdemu-1.0.0.ebuild:
  Add gcdemu for bug 198672 - userspace cdemu. Thanks to Daniel Lin <ephemient