@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gcdemu-1.2.0.tar.bz2 317098 RMD160 d4b145c827f54d1e1b38c90cc04dcdd64a690548 SHA1 51fd7c9addf9439019ee5c7966b7c449d2c34128 SHA256 02e43c003f9cc8bc8f6a5e7fd7b6e7159c69d858b229702a1c66119404af8bde
 DIST gcdemu-1.3.0.tar.gz 350524 RMD160 2f2070948e22f9bd2d4f184d47a98e6c3115971d SHA1 40edfb7033aa34ac8dcc0d7fc6881e803ac9bce7 SHA256 d90670f5169f9870fe9a5573a285e5b72f48fd3e71cf3eebabd8db04d87e5a9b
-EBUILD gcdemu-1.2.0.ebuild 883 RMD160 b77be65cc40fb9e67b8e498fb933e7771f53ae4e SHA1 294072ef04d006e218705778b854dd573eeb081a SHA256 2d5606e97f429bdd51a4664aa22638faeb77286022b40ccf894275b99b68db6f
-EBUILD gcdemu-1.3.0.ebuild 1239 RMD160 179ff16de029876406a079a5833c77943335d686 SHA1 8bd0f45c51e9d98037918287ea524b2aac89b986 SHA256 63d40fcd3d34d3715bccb69d27d45043f0f732f4eb4e5a47f9a76b82bd335805
-MISC ChangeLog 2411 RMD160 e920050df79ab1b2806bc67a1e848950c49c4af7 SHA1 c27498896d1ad6a5848dbc2bedd4156eeeaeaa36 SHA256 562b238b27211273f1ef3bef6bf5750d4652f24c42da86177afe3d3dbc5dfad4
+EBUILD gcdemu-1.2.0.ebuild 879 RMD160 a3e6f2359860c337d23da2fc2ee20351cd2a6354 SHA1 c130266b22394d2677cefe12f84d0a32389c4529 SHA256 f38807f9f340c393bb5e6dc1b7f6c7ed2c7cf8c13d481b83983d8447c51be5ed
+EBUILD gcdemu-1.3.0.ebuild 1230 RMD160 755ca2813ae9bcfb83b5de6053a9242b0a402e2b SHA1 2c588f48b96c2434e8c83d70c84e2d1fb972f8dd SHA256 bf1564dbf1a5e24f1ba171be3b4f902a923b848f639713619542bf72b3979ea3
+MISC ChangeLog 2546 RMD160 1fd1d6601cb35a5587f6dc593391125cc7a1f3fe SHA1 ed84b58b521e4892e733d9dfe1d793c68f7d6f74 SHA256 309d315c48961a7a77b9e68cbe7e75721487dcb7d6880e82bfdf4dd7b042c1f1
 MISC metadata.xml 225 RMD160 461e7786d6f2b4ad0796cdbd8da127d2aa1d9c88 SHA1 7e14b4551dd441a467b812e3b4c4f3fd795e5a58 SHA256 1c4c96d3ac062761d9e938c233751ff32b23e2c21aff1e38df6a37ffa0e97cb1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk32JioACgkQCaWpQKGI+9TlrQCdFX0iQsdZZhmg7vFrlnBA7DGD
+eqIAnRhlO5aAuY6npEQ3GRQSc6l14Sn1
+=jAyl
+-----END PGP SIGNATURE-----
