@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gcdemu/Attic/gcdemu-1.3.0.ebuild,v 1.2 2010/10/23 12:19:50 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gcdemu/Attic/gcdemu-1.3.0.ebuild,v 1.3 2011/06/13 15:00:52 pacho Exp $
 
 EAPI="3"
 
@@ -19,9 +19,9 @@ IUSE="libnotify"
 
 COMMON_DEPEND=">=dev-python/pygtk-2.6
 	>=dev-python/pygobject-2.6
-	>=dev-python/gnome-python-2.6
 	>=dev-python/libgnome-python-2.6
 	>=dev-python/gnome-applets-python-2.6
+	dev-python/gconf-python
 	>=dev-python/dbus-python-0.71
 	>=app-cdr/cdemud-1.0.0"
 DEPEND="${COMMON_DEPEND}
