@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/gcdemu
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gcdemu/ChangeLog,v 1.11 2010/10/19 14:36:51 pva Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/gcdemu/ChangeLog,v 1.12 2011/06/13 15:00:52 pacho Exp $
+
+  13 Jun 2011; Pacho Ramos <pacho@gentoo.org> gcdemu-1.2.0.ebuild,
+  gcdemu-1.3.0.ebuild:
+  DEPEND in splitted python, bug #352912.
 
 *gcdemu-1.3.0 (19 Oct 2010)
 
